--- a/questão-02.html
+++ b/questão-02.html
@@ -30,7 +30,9 @@ passadas como parâmetro, não havendo variáveis globais. -->
 
         //1 hora possui 3600 segundos, então bastava dividir o valor de segundos por 3600.
         //o resto seria para receber o valor do resto da divisão anterior
-        //o 
+        //os minutos seria o resultado do resto dividido por 60
+        //e os segundos o resto da divisão anterior por 60 
+        //no fim mostraria a hora com minutos e segundos 
     </script>
 
 </body>
